Added unit and integration tests + Refactored code